force-app/main/default/objects/Signature__c/Signature__c.object-meta.xml
<CustomObject>
    <description>Template Signature</description>
    <label>Signature</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Signature Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Signatures</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>