force-app/main/default/objects/Signature__c/fields/AdjusterAddress__c.field-meta.xml
<CustomField>
    <fullName>AdjusterAddress__c</fullName>
    <formula>IF(Adjuster__r.State=&apos;NB&apos;, &apos;20 Hector Gate, Suite 200, Dartmouth, NS B3B 0K3&apos;,IF(ISBLANK(Adjuster__r.Street), &apos;&apos;, Adjuster__r.Street+&apos;, &apos;)+ IF(ISBLANK(Adjuster__r.City), &apos;&apos;, Adjuster__r.City+&apos;, &apos;)+IF(ISBLANK(Adjuster__r.State), &apos;&apos;, Adjuster__r.State+&apos;, &apos;)+IF(ISBLANK(Adjuster__r.PostalCode), &apos;&apos;, Adjuster__r.PostalCode))</formula>
    <label>Adjuster Address</label>
    <type>Text</type>
</CustomField>