force-app/main/default/objects/Signature__c/fields/AdjusterCity__c.field-meta.xml
<CustomField>
    <fullName>AdjusterCity__c</fullName>
    <formula>Adjuster__r.City</formula>
    <label>Adjuster City</label>
    <type>Text</type>
</CustomField>