force-app/main/default/objects/Signature__c/fields/AdjusterFax__c.field-meta.xml
<CustomField>
    <fullName>AdjusterFax__c</fullName>
    <formula>Adjuster__r.Fax</formula>
    <label>Adjuster Fax</label>
    <type>Text</type>
</CustomField>