force-app/main/default/objects/Signature__c/fields/AdjusterName__c.field-meta.xml
<CustomField>
    <fullName>AdjusterName__c</fullName>
    <formula>Adjuster__r.FirstName + &apos; &apos; + Adjuster__r.LastName</formula>
    <label>Adjuster Name</label>
    <type>Text</type>
</CustomField>