force-app/main/default/objects/Signature__c/fields/AdjusterPhone__c.field-meta.xml
<CustomField>
    <fullName>AdjusterPhone__c</fullName>
    <formula>Adjuster__r.Phone</formula>
    <label>Adjuster Phone</label>
    <type>Text</type>
</CustomField>