force-app/main/default/objects/Signature__c/fields/AdjusterPostalCode__c.field-meta.xml
<CustomField>
    <fullName>AdjusterPostalCode__c</fullName>
    <formula>Adjuster__r.PostalCode</formula>
    <label>Adjuster Postal Code</label>
    <type>Text</type>
</CustomField>