force-app/main/default/objects/Signature__c/fields/AdjusterProvince__c.field-meta.xml
<CustomField>
    <fullName>AdjusterProvince__c</fullName>
    <formula>Adjuster__r.State</formula>
    <label>Adjuster Province</label>
    <type>Text</type>
</CustomField>