force-app/main/default/objects/Signature__c/fields/AdjusterStreet__c.field-meta.xml
<CustomField>
    <fullName>AdjusterStreet__c</fullName>
    <formula>Adjuster__r.Street</formula>
    <label>Adjuster Street</label>
    <type>Text</type>
</CustomField>