force-app/main/default/objects/Signature__c/fields/AdjusterTitle__c.field-meta.xml
<CustomField>
    <fullName>AdjusterTitle__c</fullName>
    <formula>IF(ProvinceOfIssuanceId__c=&apos;QC&apos;,Adjuster__r.Title_1__c,&apos;Claims Representative&apos;)+BR()+
IF(ProvinceOfIssuanceId__c=&apos;QC&apos;&amp;&amp;NOT(ISBLANK(Adjuster__r.Title_2__c)),Adjuster__r.Title_2__c,&apos;&apos;)+ 
IF(ProvinceOfIssuanceId__c=&apos;QC&apos;&amp;&amp;NOT(ISBLANK(Adjuster__r.Title_2__c)),BR(),&apos;&apos;)</formula>
    <label>Adjuster Title</label>
    <type>Text</type>
</CustomField>