force-app/main/default/objects/Signature__c/fields/AdjusterTitle_FR__c.field-meta.xml
<CustomField>
    <fullName>AdjusterTitle_FR__c</fullName>
    <formula>IF(ProvinceOfIssuanceId__c=&apos;QC&apos;, Adjuster__r.Title_1_FR__c ,&apos;Claims Representative&apos;)+BR()+
IF(ProvinceOfIssuanceId__c=&apos;QC&apos;&amp;&amp;NOT(ISBLANK(Adjuster__r.Title_2_FR__c)),Adjuster__r.Title_2_FR__c,&apos;&apos;)+
IF(ProvinceOfIssuanceId__c=&apos;QC&apos;&amp;&amp;NOT(ISBLANK(Adjuster__r.Title_2_FR__c)),BR(),&apos;&apos;)</formula>
    <label>Adjuster Title FR</label>
    <type>Text</type>
</CustomField>