force-app/main/default/objects/Signature__c/fields/DEA_Email__c.field-meta.xml
<CustomField>
    <fullName>DEA_Email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>DEA Email</label>
    <length>100</length>
    <type>Text</type>
</CustomField>