force-app/main/default/objects/Signature__c/fields/PhoneNumberType__c.field-meta.xml
<CustomField>
    <fullName>PhoneNumberType__c</fullName>
    <label>Phone Number Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Company</fullName>
                <default>true</default>
                <label>Company</label>
            </value>
            <value>
                <fullName>Adjuster</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>