force-app/main/default/objects/Signature__c/fields/PIG_TypeCode__c.field-meta.xml
<CustomField>
    <fullName>PIG_TypeCode__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PIG TypeCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>