force-app/main/default/objects/Signature__c/fields/ProvinceOfIssuanceId__c.field-meta.xml
<CustomField>
    <fullName>ProvinceOfIssuanceId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Province of Issuance Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>