force-app/main/default/objects/Signature__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Role</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Signatures By Role</relationshipLabel>
    <relationshipName>SignaturesPerRole</relationshipName>
    <type>Lookup</type>
</CustomField>