force-app/main/default/objects/Signature__c/fields/RoleId__c.field-meta.xml
<CustomField>
    <fullName>RoleId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Role Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>