force-app/main/default/objects/Signature__c/fields/Signature_FR__c.field-meta.xml
<CustomField>
    <fullName>Signature_FR__c</fullName>
    <formula>AdjusterTitle_FR__c +
PIG_Name_EN__c + BR() +
AdjusterAddress__c</formula>
    <label>Signature FR</label>
    <type>Text</type>
</CustomField>