force-app/main/default/objects/Signature__c/fields/SignatureAdditionalInformation__c.field-meta.xml
<CustomField>
    <fullName>SignatureAdditionalInformation__c</fullName>
    <formula>IF(ISPICKVAL(PhoneNumberType__c,&apos;Company&apos;),&apos;Telephone: &apos; + CompanyPhone__c, &apos;Telephone: &apos; + AdjusterPhone__c)+BR()+
&apos;Email: &apos;+DEA_Email__c</formula>
    <label>Signature Additional Information</label>
    <type>Text</type>
</CustomField>