force-app/main/default/objects/Signature__c/fields/SignatureEN__c.field-meta.xml
<CustomField>
    <fullName>SignatureEN__c</fullName>
    <formula>AdjusterTitle__c +
PIG_Name_EN__c + BR() +
AdjusterAddress__c</formula>
    <label>Signature EN</label>
    <type>Text</type>
</CustomField>